[package]
name = "r2d2_redis_cluster2"
version = "0.23.3"
authors = ["keesh.zhang<chunhui2001@gmail.com>"]
keywords = ["redis", "cluster", "database", "r2d2", "pool"]
description = "Redis cluster support for the r2d2 connection pool."
homepage = "https://github.com/chunhui2001/r2d2_redis_cluster2"
repository = "https://github.com/chunhui2001/r2d2_redis_cluster2"
license = "MIT"
readme = "README.md"

[dependencies]
r2d2 = "0.8"
redis_cluster_rs2 = "0.23.3"
# redis_cluster_rs = { git="https://github.com/chunhui2001/redis-cluster-rs.git", rev="refs/tags/0.23.3.2" }
